--- a/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail2/RecommendDetail2.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail2/RecommendDetail2.xib
@@ -184,7 +184,7 @@
                                                 <action selector="actionHidekeyboard:" destination="-1" eventType="touchUpInside" id="89"/>
                                             </connections>
                                         </button>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="E75A9B08-2FD2-48D4-822C-2F0C3E57CFB0" id="81">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="6C63E13A-D11C-4792-9922-C618C1652801" id="81">
                                             <rect key="frame" x="10" y="5" width="300" height="168"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -225,10 +225,10 @@
                                             </connections>
                                         </button>
                                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Kqq-ZR-2Ao">
-                                            <rect key="frame" x="98" y="213" width="124" height="30"/>
+                                            <rect key="frame" x="135" y="213" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
-                                            <state key="normal" title="Shuffle" backgroundImage="rounded_orange.png">
+                                            <state key="normal" backgroundImage="shuffle_white.png">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
@@ -320,7 +320,7 @@
         </view>
     </objects>
     <resources>
-        <image name="E75A9B08-2FD2-48D4-822C-2F0C3E57CFB0" width="300" height="100">
+        <image name="6C63E13A-D11C-4792-9922-C618C1652801" width="300" height="100">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -2380,6 +2380,7 @@ AAQBAAAAAAAAAEIAAAAAAAAAAAAAAAAAAd7zA
         <image name="ic_tab_myprofile.png" width="30" height="30"/>
         <image name="ic_tab_newsfeed.png" width="32" height="28"/>
         <image name="rounded_orange.png" width="120" height="17"/>
+        <image name="shuffle_white.png" width="50" height="50"/>
         <image name="textfill195_41.png" width="195" height="41"/>
         <image name="topbar2.png" width="320" height="44"/>
     </resources>
