--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
@@ -70,7 +70,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                    <state key="normal" image="AB7E317A-AD88-4936-8480-D77192EAD786">
+                    <state key="normal" image="F6AB0B2F-162E-41C5-9AC7-C29CC4978226">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -81,7 +81,7 @@
                         <action selector="actionBackToSelectedIndex:" destination="-1" eventType="touchUpInside" id="114"/>
                     </connections>
                 </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="12" userLabel="Button - profile">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="12" userLabel="Button - profile">
                     <rect key="frame" x="275" y="7" width="30" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
@@ -464,7 +464,7 @@
         </view>
     </objects>
     <resources>
-        <image name="AB7E317A-AD88-4936-8480-D77192EAD786" width="30" height="30">
+        <image name="F6AB0B2F-162E-41C5-9AC7-C29CC4978226" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
