--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendDetail/ResRecommendDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendDetail/ResRecommendDetailVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -12,6 +12,7 @@
                 <outlet property="lbDetail" destination="12" id="33"/>
                 <outlet property="lbName" destination="11" id="32"/>
                 <outlet property="lbTitle" destination="15" id="34"/>
+                <outlet property="replyText" destination="azu-bN-rUJ" id="0cy-bc-ZyE"/>
                 <outlet property="replyView" destination="u5U-qt-oKU" id="Byv-ZE-NfD"/>
                 <outlet property="scrollMain" destination="pwy-kK-e9f" id="T2W-Yx-nTJ"/>
                 <outlet property="tbvFilter" destination="vgO-3j-oQj" id="k7s-KY-xLq"/>
@@ -54,7 +55,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view contentMode="scaleToFill" id="13" userLabel="View - view 2">
-                            <rect key="frame" x="0.0" y="83" width="320" height="196"/>
+                            <rect key="frame" x="0.0" y="83" width="320" height="164"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="avatar.png" id="14">
@@ -99,7 +100,7 @@
                                     </connections>
                                 </button>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" id="18">
-                                    <rect key="frame" x="20" y="50" width="280" height="146"/>
+                                    <rect key="frame" x="20" y="50" width="280" height="114"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -111,11 +112,11 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
                         <view contentMode="scaleToFill" id="u5U-qt-oKU">
-                            <rect key="frame" x="20" y="287" width="280" height="300"/>
+                            <rect key="frame" x="20" y="255" width="280" height="332"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="70g-4r-wCN">
-                                    <rect key="frame" x="0.0" y="0.0" width="280" height="300"/>
+                                    <rect key="frame" x="0.0" y="32" width="280" height="300"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -125,26 +126,30 @@
                                     </connections>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="textfill195_41.png" id="HRv-Zy-co5">
-                                    <rect key="frame" x="20" y="0.0" width="240" height="94"/>
+                                    <rect key="frame" x="20" y="32" width="240" height="94"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="4iX-vn-6bK" userLabel="Button - bt send">
-                                    <rect key="frame" x="121" y="102" width="38" height="31"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4iX-vn-6bK" userLabel="Button - bt send">
+                                    <rect key="frame" x="100" y="134" width="90" height="31"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                    <state key="normal" image="ic_bt_send.png">
-                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <state key="normal" title="Send Reply" backgroundImage="rounded_orange.png">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
-                                    <state key="highlighted">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <state key="disabled" title="Send Reply">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <state key="selected" title="Send Reply">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <state key="highlighted" title="Send Reply"/>
                                     <connections>
                                         <action selector="actionSentMessage:" destination="-1" eventType="touchUpInside" id="abr-c7-Uyb"/>
                                     </connections>
                                 </button>
                                 <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vgO-3j-oQj">
-                                    <rect key="frame" x="40" y="95" width="200" height="168"/>
+                                    <rect key="frame" x="40" y="127" width="200" height="168"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -155,6 +160,13 @@
                                         <outlet property="delegate" destination="-1" id="FXg-Ij-cEk"/>
                                     </connections>
                                 </tableView>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reply to" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="azu-bN-rUJ">
+                                    <rect key="frame" x="20" y="3" width="240" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
@@ -208,8 +220,8 @@
         <image name="avatar.png" width="50" height="50"/>
         <image name="bg340.png" width="300" height="340"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
-        <image name="ic_bt_send.png" width="38" height="31"/>
         <image name="ic_bt_share.png" width="30" height="30"/>
+        <image name="rounded_orange.png" width="120" height="17"/>
         <image name="textfill195_41.png" width="195" height="41"/>
         <image name="topbar2.png" width="320" height="44"/>
     </resources>
