--- a/iOS/TasteSync/Classes/ViewControllers/AskTab/AskRecommendations/AskRecommendationsVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/AskTab/AskRecommendations/AskRecommendationsVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -168,7 +168,7 @@
                             </state>
                             <state key="highlighted" title="OK"/>
                             <connections>
-                                <action selector="hideAction:" destination="-1" eventType="touchUpInside" id="bIq-h5-FqS"/>
+                                <action selector="actionNoThanks:" destination="-1" eventType="touchUpInside" id="2VM-cr-7Ng"/>
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg100.png" id="8LZ-52-C6M">
