--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendDetail/ResRecommendDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendDetail/ResRecommendDetailVC.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResRecommendDetailVC">
             <connections>
                 <outlet property="_avatar" destination="14" id="ETb-6a-1te"/>
+                <outlet property="btAsk" destination="vaJ-kL-96e" id="CZO-Xi-TZP"/>
                 <outlet property="btFollow" destination="16" id="29"/>
                 <outlet property="lbDetail" destination="12" id="33"/>
                 <outlet property="lbName" destination="11" id="32"/>
@@ -51,6 +52,22 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="vaJ-kL-96e" userLabel="Button - question">
+                                    <rect key="frame" x="244" y="21" width="30" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                    <state key="normal" backgroundImage="ic_ask.png">
+                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <state key="selected" backgroundImage="ic_ask.png"/>
+                                    <state key="highlighted" backgroundImage="ic_ask.png">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="actionQuestion:" destination="-1" eventType="touchUpInside" id="cmA-r1-CsZ"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
@@ -219,6 +236,7 @@
     <resources>
         <image name="avatar.png" width="50" height="50"/>
         <image name="bg340.png" width="300" height="340"/>
+        <image name="ic_ask.png" width="30" height="30"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
         <image name="ic_bt_share.png" width="30" height="30"/>
         <image name="rounded_orange.png" width="120" height="17"/>
