--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/ResRecommend/ResRecommendVC.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResRecommendVC">
             <connections>
-                <outlet property="btAsk" destination="11" id="oDz-1c-aiA"/>
                 <outlet property="inforView" destination="8" id="xDc-iG-tHp"/>
                 <outlet property="lbDetail" destination="10" id="15"/>
                 <outlet property="lbName" destination="9" id="16"/>
@@ -80,21 +79,6 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="11" userLabel="Button - question">
-                            <rect key="frame" x="270" y="25" width="30" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
-                            <state key="normal" backgroundImage="ic_ask.png">
-                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <state key="highlighted">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="actionQuestion:" destination="-1" eventType="touchUpInside" id="19"/>
-                            </connections>
-                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
@@ -116,7 +100,6 @@
     </objects>
     <resources>
         <image name="bg340.png" width="300" height="340"/>
-        <image name="ic_ask.png" width="30" height="30"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
         <image name="ic_bt_share.png" width="30" height="30"/>
         <image name="topbar2.png" width="320" height="44"/>
