Rick-UI changes

--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantDetailVC">
@@ -73,7 +73,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                    <state key="normal" image="41D40417-87DE-44BB-B2EA-BAF4C2FD6407">
+                    <state key="normal" image="B327DD22-B4BA-4EE2-9EED-85981B25681C">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -143,8 +143,8 @@
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wJr-g6-Qfb">
-                                            <rect key="frame" x="268" y="79" width="42" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reserve" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wJr-g6-Qfb">
+                                            <rect key="frame" x="263" y="79" width="50" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -154,11 +154,13 @@
                                             <rect key="frame" x="274" y="55" width="30" height="30"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                                            <state key="normal" backgroundImage="ic_ask.png">
+                                            <state key="normal" backgroundImage="dec20_icon app_reserved icon 2_30x30.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
-                                            <state key="highlighted">
+                                            <state key="disabled" backgroundImage="dec20_icon app_reserved icon 2_30x30.png"/>
+                                            <state key="selected" backgroundImage="dec20_icon app_reserved icon 2_30x30.png"/>
+                                            <state key="highlighted" backgroundImage="dec20_icon app_reserved icon 2_30x30.png">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -473,11 +475,14 @@
                                     <rect key="frame" x="17" y="6" width="22" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <state key="normal" backgroundImage="ic_tab_newsfeed_on.png">
+                                    <state key="normal" backgroundImage="Location-Direction icon.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <state key="disabled" backgroundImage="Location-Direction icon.png"/>
+                                    <state key="selected" backgroundImage="Location-Direction icon.png"/>
+                                    <state key="highlighted" backgroundImage="Location-Direction icon.png"/>
                                 </button>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Website" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qAx-Hj-ZiI">
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Direction" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qAx-Hj-ZiI">
                                     <rect key="frame" x="-2" y="24" width="61" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
@@ -540,7 +545,7 @@
         </view>
     </objects>
     <resources>
-        <image name="41D40417-87DE-44BB-B2EA-BAF4C2FD6407" width="30" height="30">
+        <image name="B327DD22-B4BA-4EE2-9EED-85981B25681C" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -651,13 +656,14 @@ wxfGF8sX2hfeF+UX7Rf6F/8YARgDGAgYEBgTGBgYIBgjGDUYOBg9AAAAAAAAAgEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAAGD8
 </mutableData>
         </image>
+        <image name="Location-Direction icon.png" width="30" height="30"/>
         <image name="arrow_right.png" width="30" height="30"/>
         <image name="avatar.png" width="50" height="50"/>
         <image name="bg100.png" width="300" height="100"/>
         <image name="bg44.png" width="300" height="44"/>
         <image name="bg_deal.png" width="296" height="36"/>
         <image name="call icon.png" width="30" height="30"/>
-        <image name="ic_ask.png" width="30" height="30"/>
+        <image name="dec20_icon app_reserved icon 2_30x30.png" width="30" height="30"/>
         <image name="ic_bt_addtomyfaves.png" width="30" height="30"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
         <image name="ic_bt_levaveatip.png" width="30" height="30"/>
@@ -665,7 +671,6 @@ AAAAAAAAAAAAGD8
         <image name="ic_bt_share.png" width="30" height="30"/>
         <image name="ic_bt_viewmenu.png" width="30" height="30"/>
         <image name="ic_saved.png" width="30" height="30"/>
-        <image name="ic_tab_newsfeed_on.png" width="32" height="28"/>
         <image name="social-networks-foursquare.20131010231035.png" width="16" height="16"/>
         <image name="topbar2.png" width="320" height="44"/>
     </resources>
